# Einsums

./: .clang-format  .clang-tidy  .clangd  .cmake-format.py  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  New Graph.cgraph  README.md  TODO.md  Thoughts.md  pytest.ini
libs/: CMakeLists.txt  README.rst  create_module_skeleton.py  index.rst  overview.rst
libs/Einsums/: CMakeLists.txt  index.rst  modules.rst
libs/Einsums/BLASVendor/: CMakeLists.txt
libs/Einsums/CXX23/: CMakeLists.txt
libs/Einsums/Comm/: CMakeLists.txt
libs/Einsums/CommandLine/: CMakeLists.txt
libs/Einsums/ComputeGraph/: CMakeLists.txt
libs/Einsums/ComputeGraphTypes/: CMakeLists.txt
libs/Einsums/Config/: CMakeLists.txt
libs/Einsums/Coroutines/: CMakeLists.txt  README.rst
libs/Einsums/Errors/: CMakeLists.txt
libs/Einsums/GPU/: CMakeLists.txt
libs/Einsums/HPTT/: CMakeLists.txt
libs/Einsums/Hardware/: CMakeLists.txt  README.rst
libs/Einsums/LinearAlgebra/: CMakeLists.txt
libs/Einsums/Logging/: CMakeLists.txt
libs/Einsums/PackedGemm/: CMakeLists.txt
libs/Einsums/Preprocessor/: CMakeLists.txt
libs/Einsums/Profile/: CMakeLists.txt
libs/Einsums/Python/: CMakeLists.txt  stub_overlay.pyi
libs/Einsums/PythonDemo/: CMakeLists.txt
libs/Einsums/Runtime/: CMakeLists.txt
libs/Einsums/RuntimeConfiguration/: CMakeLists.txt
libs/Einsums/SIMD/: CMakeLists.txt
libs/Einsums/TaskPool/: CMakeLists.txt
libs/Einsums/Tensor/: CMakeLists.txt
libs/Einsums/TensorAlgebra/: CMakeLists.txt
libs/Einsums/TensorBase/: CMakeLists.txt
libs/Einsums/TensorIO/: CMakeLists.txt
libs/Einsums/TensorUtilities/: CMakeLists.txt
libs/Einsums/Threads/: CMakeLists.txt  README.rst
libs/Einsums/ThreadsBase/: CMakeLists.txt  README.rst
libs/Einsums/TypeSupport/: CMakeLists.txt
libs/Einsums/Utilities/: CMakeLists.txt
libs/Einsums/Version/: CMakeLists.txt
libs/EinsumsExperimental/: CMakeLists.txt  modules.rst
libs/EinsumsExperimental/Topology/: CMakeLists.txt  README.rst
libs/create_module_skeleton/: __main__.py  build_structure.py  cmake_template.txt.fstring  configure_toplevel.py
libs/create_module_skeleton/template_top/: CMakeLists.txt.fstring
libs/einsums/: CMakeLists.txt  modules.rst
libs/einsums/affinity/: CMakeLists.txt  README.rst
libs/einsums/allocator_support/: CMakeLists.txt  README.rst
libs/einsums/assertion/: CMakeLists.txt  README.rst
libs/einsums/backtrace/: CMakeLists.txt  README.rst
libs/einsums/blas/: CMakeLists.txt  README.rst
libs/einsums/blas_base/: CMakeLists.txt  README.rst
libs/einsums/blas_vendor/: CMakeLists.txt  README.rst
libs/einsums/command_line_handling/: CMakeLists.txt  README.rst
libs/einsums/concepts/: CMakeLists.txt  README.rst
libs/einsums/concurrency/: CMakeLists.txt  README.rst
libs/einsums/config/: CMakeLists.txt  README.rst
libs/einsums/core/: CMakeLists.txt  README.rst
libs/einsums/coroutines/: CMakeLists.txt  README.rst
libs/einsums/datastructures/: CMakeLists.txt  README.rst
libs/einsums/debugging/: CMakeLists.txt  README.rst
libs/einsums/errors/: CMakeLists.txt  README.rst
libs/einsums/execution/: CMakeLists.txt  README.rst
libs/einsums/execution_base/: CMakeLists.txt  README.rst
libs/einsums/filesystem/: CMakeLists.txt  README.rst
libs/einsums/functional/: CMakeLists.txt  README.rst
libs/einsums/hptt/: CMakeLists.txt  README.rst
libs/einsums/ini/: CMakeLists.txt  README.rst
libs/einsums/init_runtime/: CMakeLists.txt  README.rst
libs/einsums/iterator/: CMakeLists.txt  README.rst
libs/einsums/iterator_support/: CMakeLists.txt  README.rst
libs/einsums/itt/: CMakeLists.txt  README.rst
libs/einsums/itt_notify/: CMakeLists.txt  README.rst
libs/einsums/linear_algebra/: CMakeLists.txt  README.rst
libs/einsums/lock_registration/: CMakeLists.txt  README.rst
libs/einsums/logging/: CMakeLists.txt  README.rst
libs/einsums/memory/: CMakeLists.txt  README.rst
libs/einsums/pfr/: CMakeLists.txt  README.rst
libs/einsums/preprocessor/: CMakeLists.txt  README.rst
libs/einsums/print/: CMakeLists.txt  README.rst
libs/einsums/profile/: CMakeLists.txt  README.rst
libs/einsums/program_options/: CMakeLists.txt  README.rst
libs/einsums/resource_partitioner/: CMakeLists.txt  README.rst
libs/einsums/runtime/: CMakeLists.txt  README.rst
libs/einsums/runtime_configuration/: CMakeLists.txt  README.rst
libs/einsums/schedulers/: CMakeLists.txt  README.rst
libs/einsums/string_util/: CMakeLists.txt  README.rst
libs/einsums/string_utils/: CMakeLists.txt  README.rst
libs/einsums/synchronization/: CMakeLists.txt  README.rst
libs/einsums/tensor/: CMakeLists.txt  README.rst
libs/einsums/tensor_algebra/: CMakeLists.txt  README.rst
libs/einsums/tensor_base/: CMakeLists.txt  README.rst
libs/einsums/tensor_utilities/: CMakeLists.txt  README.rst
libs/einsums/thread_manager/: CMakeLists.txt  README.rst
libs/einsums/thread_pools/: CMakeLists.txt  README.rst
libs/einsums/thread_support/: CMakeLists.txt  README.rst
libs/einsums/threading/: CMakeLists.txt  README.rst
libs/einsums/threading_base/: CMakeLists.txt  README.rst
libs/einsums/timing/: CMakeLists.txt  README.rst
libs/einsums/topology/: CMakeLists.txt  README.rst
libs/einsums/type_support/: CMakeLists.txt  README.rst
libs/einsums/util/: CMakeLists.txt  README.rst
libs/einsums/version/: CMakeLists.txt  README.rst
libs/src/: dummy.cpp
testing/performance/: CMakeLists.txt
testing/performance_testing/: CMakeLists.txt
testing/performance_testing/src/: main.cpp
testing/testing/: CMakeLists.txt
testing/testing/src/: main.cpp  testing.cpp
tools/einsums-pybind/: CMakeLists.txt  README.md
tools/einsums-pybind/scripts/: aggregate_stubs.py  gen_cpp_docs.py  render_cpp_rst.py  render_docs_rst.py
tools/einsums-pybind/src/: AnnotationParser.cpp  AnnotationParser.hpp  DocComment.cpp  DocComment.hpp  DocExtractor.cpp  DocExtractor.hpp  DocsJson.cpp  DocsJson.hpp  Emitter.cpp  Emitter.hpp  IR.cpp  IR.hpp  InstantiateParser.cpp  InstantiateParser.hpp  MacroScanner.cpp  MacroScanner.hpp  (+11 more)
(+1864 files in other folders)
